<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>config::AddSampleComboDialog</class>
 <widget class="QDialog" name="config::AddSampleComboDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>374</width>
    <height>284</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>Add Sample</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>1</y>
     <width>202</width>
     <height>154</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <spacer name="verticalSpacer_top">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>168</width>
        <height>13</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
     <layout class="QHBoxLayout" name="SampleIdLayout">
      <item>
       <widget class="QLabel" name="SampleIdLabel">
        <property name="text">
         <string>Sample Id</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="SampleIdText"/>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="SampleRateLayout">
      <item>
       <widget class="QLabel" name="SampleRateLabel">
        <property name="text">
         <string>Sample Rate</string>
        </property>
        <property name="buddy">
         <cstring>SampleRateText</cstring>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="SampleRateText">
        <property name="toolTip">
         <string extracomment="Numeric Id - default is know unique - must be unique"/>
        </property>
        <property name="inputMask">
         <string/>
        </property>
        <property name="text">
         <string/>
        </property>
        <property name="frame">
         <bool>true</bool>
        </property>
        <property name="readOnly">
         <bool>false</bool>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="FilterLayout">
      <item>
       <widget class="QLabel" name="FilterLabel">
        <property name="text">
         <string>Filter</string>
        </property>
        <property name="buddy">
         <cstring>FilterText</cstring>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="FilterText">
        <property name="toolTip">
         <string extracomment="Where is DSM located in Plane"/>
        </property>
        <property name="inputMask">
         <string/>
        </property>
        <property name="text">
         <string/>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
    <item>
     <spacer name="verticalSpacer_bottom">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>168</width>
        <height>13</height>
       </size>
      </property>
     </spacer>
    </item>
   </layout>
  </widget>
 </widget>
 <tabstops>
  <tabstop>SampleRateText</tabstop>
  <tabstop>FilterText</tabstop>
  <tabstop>buttonBox</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>config::AddSampleComboDialog</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>204</x>
     <y>134</y>
    </hint>
    <hint type="destinationlabel">
     <x>119</x>
     <y>182</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>config::AddSampleComboDialog</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>204</x>
     <y>134</y>
    </hint>
    <hint type="destinationlabel">
     <x>73</x>
     <y>229</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>newSensor(QString)</slot>
  <slot>setDevice(int)</slot>
 </slots>
</ui>
